--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,26 @@
-body {
-  /* padding: 40px; */
-  font-family: Arial;
-  text-align: center;
+body{
+  background: lavender;
+}
+input {
+  border: 1px solid #d9d9d9;
+   border-radius: 4px;
+   box-sizing: border-box;
+   padding: 10px;
+   width: 100%;
 }
 
-input {
-  width: 90%;
-  margin-bottom: 20px;
+form {
+  box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
+  background: white;
+  border: 1px solid #dedede;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 30px 50px;
 }
+
 
 .app {
   min-height: auto;
@@ -25,15 +38,23 @@ input {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin: 5px;
+  padding: 20px;
+  margin-top: 20px;
 }
 
-.Newpost{
-  margin-top: 10px;
-  padding: 5px;
-  box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
-  height: 100px;
-  align-items: center;
-  display: inline-flex;
+.container{
   margin-bottom: 100px; 
+  font-family: Arial;
+  text-align: center;
+ 
+  padding: 20px;
+}
+
+.submitButton {
+  background-color: #6976d9;
+  color: white;
+  font-family: sans-serif;
+  font-size: 14px;
+  margin: 20px 0px;
+  height: 50px;
 }
